--- a/Front/src/app/demo/component/basic-component/color/color.component.html
+++ b/Front/src/app/demo/component/basic-component/color/color.component.html
@@ -37,6 +37,7 @@
             </td>
             <td>{{ member.nom }}</td>
             <td>{{ member.prenom }}</td>
+            <td>{{ member.email }}</td>
             <td>
               <span class="badge" [ngClass]="{
                 'bg-primary': member.role === 'PRESIDENT',
