--- a/Front/src/app/profile/profile.component.html
+++ b/Front/src/app/profile/profile.component.html
@@ -28,28 +28,34 @@
         <div *ngIf="currentRole !== 'MANAGER'" class="form-group">
           <label>Nom</label>
           <input type="text" class="form-control" formControlName="nom" 
+            [class.is-invalid]="isFirstLogin && !profileForm.get('nom').value"
                  [readonly]="currentRole === 'MANAGER'">
         </div>
         
         <div *ngIf="currentRole !== 'MANAGER'" class="form-group">
           <label>Prénom</label>
           <input type="text" class="form-control" formControlName="prenom"
+            [class.is-invalid]="isFirstLogin && !profileForm.get('prenom').value"
                  [readonly]="currentRole === 'MANAGER'">
         </div>
         
         <div *ngIf="currentRole !== 'MANAGER'" class="form-group">
           <label>CIN</label>
-          <input type="text" class="form-control" formControlName="cin">
+          <input type="text" class="form-control" formControlName="cin"
+          [class.is-invalid]="isFirstLogin && !profileForm.get('cin').value">
         </div>
 
         <div class="form-group">
           <label>Email</label>
-          <input type="email" class="form-control" formControlName="email" required>
+          <input type="email" class="form-control" formControlName="email" required
+          [class.is-invalid]="isFirstLogin && !profileForm.get('email').value">
         </div>
 
         <div *ngIf="currentRole !== 'MANAGER'" class="form-group">
           <label>Sexe</label>
-          <select class="form-select" formControlName="sexe">
+          <select class="form-select" formControlName="sexe"
+          [class.is-invalid]="isFirstLogin && !profileForm.get('sexe').value">
+            
             <option [ngValue]="null" disabled>Sélectionnez</option>
             <option *ngFor="let sexe of sexeOptions" [value]="sexe">{{sexe}}</option>
           </select>
@@ -66,7 +72,8 @@
       <div class="form-grid">
         <div class="form-group">
           <label>Filière</label>
-          <select class="form-select" formControlName="filiere">
+          <select class="form-select" formControlName="filiere"
+          [class.is-invalid]="isFirstLogin && !profileForm.get('filiere').value">
             <option [ngValue]="null" disabled>Sélectionnez</option>
             <option *ngFor="let filiere of filiereOptions" [value]="filiere">{{filiere}}</option>
           </select>
@@ -74,7 +81,8 @@
         
         <div class="form-group">
           <label>Niveau</label>
-          <select class="form-select" formControlName="niveau">
+          <select class="form-select" formControlName="niveau"
+          [class.is-invalid]="isFirstLogin && !profileForm.get('niveau').value">
             <option [ngValue]="null" disabled>Sélectionnez</option>
             <option *ngFor="let niveau of niveauOptions" [value]="niveau">{{niveau}}</option>
           </select>
@@ -82,7 +90,9 @@
         
         <div class="form-group">
           <label>Formation</label>
-          <select class="form-select" formControlName="formation">
+          <select class="form-select" formControlName="formation"
+          [class.is-invalid]="isFirstLogin && !profileForm.get('formation').value">
+
             <option [ngValue]="null" disabled>Sélectionnez</option>
             <option *ngFor="let formation of formationOptions" [value]="formation">{{formation}}</option>
           </select>
@@ -96,13 +106,15 @@
         <i class="bi bi-shield-lock"></i> Sécurité
       </h3>
       
-      <div *ngIf="!isFirstLogin" class="form-group">
+      <div  class="form-group">
         <label>Mot de passe actuel</label>
         <div class="input-group">
           <input [type]="showCurrentPassword ? 'text' : 'password'" 
                  class="form-control" 
                  formControlName="currentPassword"
-                 placeholder="Obligatoire pour modifier">
+                 placeholder="Obligatoire pour modifier"
+                 [class.is-invalid]="isFirstLogin && !profileForm.get('currentPassword').value">
+                 
           <button class="btn btn-outline-secondary" type="button" 
                   (click)="togglePasswordVisibility('currentPassword')">
             <i class="bi bi-eye{{showCurrentPassword ? '-slash' : ''}}"></i>
@@ -117,7 +129,9 @@
                  class="form-control" 
                  formControlName="password"
                  [required]="isFirstLogin"
-                 placeholder="Laissez vide pour ne pas changer">
+                 placeholder="Laissez vide pour ne pas changer"
+                 [class.is-invalid]="isFirstLogin && !profileForm.get('password').value">
+                 
           <button class="btn btn-outline-secondary" type="button" 
                   (click)="togglePasswordVisibility('password')">
             <i class="bi bi-eye{{showPassword ? '-slash' : ''}}"></i>
@@ -131,7 +145,9 @@
           <input [type]="showConfirmPassword ? 'text' : 'password'" 
                  class="form-control" 
                  formControlName="confirmPassword"
-                 [required]="isFirstLogin">
+                 [required]="isFirstLogin"
+                 [class.is-invalid]="isFirstLogin && !profileForm.get('confirmPassword').value">
+            
           <button class="btn btn-outline-secondary" type="button" 
                   (click)="togglePasswordVisibility('confirmPassword')">
             <i class="bi bi-eye{{showConfirmPassword ? '-slash' : ''}}"></i>
