--- a/Front/src/app/theme/layouts/admin-layout/navigation/nav-content/nav-content.component.html
+++ b/Front/src/app/theme/layouts/admin-layout/navigation/nav-content/nav-content.component.html
@@ -1,10 +1,13 @@
 <!-- Vertical layout -->
-  <div class="navbar-content">
-    <ul class="nav coded-inner-navbar" (clickOutside)="fireOutClick()" (mouseleave)="navMob()">
-      @for (item of navigations; track item) {
-        @if (item.type === 'group') {
-          <app-nav-group [item]="item"></app-nav-group>
-        }
+<div class="navbar-content">
+  <ul class="nav coded-inner-navbar" (clickOutside)="fireOutClick()" (mouseleave)="navMob()">
+    @for (item of navigations; track item) {
+      @if (item.type === 'group') {
+        <app-nav-group
+          [item]="item"
+          (dynamicCollapseClick)="handleDynamicCollapseClick($event)">
+        </app-nav-group>
       }
-    </ul>
-  </div>
+    }
+  </ul>
+</div>
