--- a/Front/src/app/theme/layouts/admin-layout/navigation/nav-content/nav-group/nav-group.component.html
+++ b/Front/src/app/theme/layouts/admin-layout/navigation/nav-content/nav-group/nav-group.component.html
@@ -1,9 +1,13 @@
 <li class="nav-item coded-menu-caption">
   <label>{{ item().title }}</label>
 </li>
+
 @for (item of item().children; track item) {
   @if (item.type === 'collapse') {
-    <app-nav-collapse [item]="item"></app-nav-collapse>
+    <app-nav-collapse 
+      [item]="item" 
+      (dynamicCollapseClick)="dynamicCollapseClick.emit($event)"> <!-- 👈 emit upward -->
+    </app-nav-collapse>
   } @else if (item.type === 'item') {
     <app-nav-item [item]="item"></app-nav-item>
   }
