--- a/Front/src/app/demo/pages/authentication/auth-login/auth-login.component.html
+++ b/Front/src/app/demo/pages/authentication/auth-login/auth-login.component.html
@@ -2,40 +2,61 @@
   <div class="auth-wrapper v3">
     <div class="auth-form">
       <div class="auth-header">
-        <a routerLink="/dashboard/default"><img src="assets/images/logo.png" alt="logo" /></a>
+        <a routerLink="/accueil"><img src="assets/images/logo.png" alt="logo" /></a>
       </div>
       <div class="card my-5">
         <div class="card-body">
           <div class="d-flex justify-content-between align-items-end mb-4">
             <h3 class="mb-0"><b>Login</b></h3>
-            
           </div>
-          <div class="form-group mb-3">
-            <label class="form-label" for="email">User Name or Email Address </label>
-            <input type="email" class="form-control" id="email" placeholder="Email Address" name="username" [(ngModel)]= "model.username"/>
-          </div>
-          <div class="form-group mb-3">
-            <label class="form-label" for="password">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Password" name="password" [(ngModel)]= "model.password" />
-          </div>
-          <div class="d-flex mt-1 justify-content-between">
-            <div class="form-check">
-              <input class="form-check-input input-primary" type="checkbox" id="customCheckc1" checked="" />
-              <label class="form-check-label text-muted" for="customCheckc1">Keep me sign in</label>
+
+          <form (ngSubmit)="loginUser()" #loginForm="ngForm">
+            <div class="form-group mb-3">
+              <label class="form-label" for="email">Username</label>
+              <input
+                type="text"
+                class="form-control"
+                id="email"
+                placeholder="Username"
+                name="username"
+                [(ngModel)]="model.username"
+                (keydown.enter)="loginUser()"
+                required
+              />
             </div>
-            <h5 class="text-secondary f-w-400"><a href="javascript:">Forgot Password?</a></h5>
-          </div>
-          <div class="d-grid mt-4">
-            <button (click)="loginUser()" type="button" class="btn btn-primary">Login</button>
-          </div>
-          
-            
-          
+
+            <div class="form-group mb-1">
+              <label class="form-label" for="password">Password</label>
+              <input
+                type="password"
+                class="form-control"
+                id="password"
+                placeholder="Password"
+                name="password"
+                [(ngModel)]="model.password"
+                (keydown.enter)="loginUser()"
+                required
+              />
+            </div>
+
+            <!-- Error Message -->
+            <div *ngIf="errorMessage" class="text-danger mt-2">
+              {{ errorMessage }}
+            </div>
+
+            <div class="d-flex mt-3 justify-content-between">
+              <h5 class="text-secondary f-w-400">
+                <a href="javascript:">Forgot Password?</a>
+              </h5>
+            </div>
+
+            <div class="d-grid mt-4">
+              <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+          </form>
+
         </div>
-      </div>
-      
-        
       </div>
     </div>
   </div>
-
+</div>
